# llm_tutorial

./: README.md  pyproject.toml
src/: shakespear_dialogue.py  testing_the_effect_of_temperature.py
