[project]
name = "llm-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)"
]

[tool.poetry]
packages = [{include = "llm_tutorial", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
